Fix Lambda syntax error in CloudFormation templates
- Fixed invalid Python syntax: termination_hours = ${TerminationHours}
- Changed to valid CloudFormation substitution: termination_hours = int('${TerminationHours}')
- Applied fix to both G5 instance and Aurora PostgreSQL templates

--- a/aurora-postgresql-cloudformation.yaml
+++ b/aurora-postgresql-cloudformation.yaml
@@ -250,7 +250,7 @@ Resources:
                       
                       if tags.get('AutoTerminate') == 'true':
                           # Calculate termination time from cluster creation time + TerminationHours parameter
-                          termination_hours = ${TerminationHours}
+                          termination_hours = int('${TerminationHours}')
                           cluster_create_time = cluster.get('ClusterCreateTime')
                           if cluster_create_time:
                               # Convert to UTC datetime if it's not already
